--- a/styles/index.css
+++ b/styles/index.css
@@ -14,8 +14,8 @@
 }
 
 #logo{
-  width: 250px;
-  height: 250px;
+  width: 225px;
+  height: 225px;
   filter: drop-shadow(0px 0px 10px #ffffff);
 }
 
@@ -42,14 +42,17 @@ button{
 }
 
 #title{
-    font-size: 40px;
+    font-size: 45px;
+    font-weight: bolder;
     font-family: "Gugi", sans-serif;
+    color:#98A6D4;
 }
 
 
 #slogan{
   color: white;
   width: 100%;
+  inline-size: min-content;
   font-family: "Gugi", sans-serif;
   font-size: 10px;
   overflow: hidden; /* content is hidden */
@@ -76,12 +79,11 @@ button{
 
 #login{
   position: absolute;
-  top:0;
   background: rgba(0, 0, 0, 0.60);
   color: #f1f1f1;
   width: 100%;
   height: 100%;
-  padding: 100px;
+  padding: 50px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
