--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 <div class="container-fluid text-center align-self-center" id="content">
   <div id="box">
     <img id="logo" src="./images/invsona.png" alt="invsona logo" />
-    <h1 id="title">Invsona</h1>
+    <h1 class="pt-3"id="title">Invsona</h1>
     <div class="mb-5">
       <p id="slogan">Character Creation at Your Finger Tips</p>
     </div>
