--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,3 +1,4 @@
+<!-- Purpose: Sign Up for Invsona -->
 <!-- header -->
 <%-include ('./partials/header.ejs')%>
 
@@ -7,88 +8,92 @@
   <source src="./images/blue_bg.mp4" type="video/mp4" />
 </video>
 
-
 <!-- logo -->
-<div class="container-fluid text-center align-self-center" id="login">
+<div class="container-fluid" id="login">
   <div id="box">
     <img id="logo" src="./images/invsona.png" alt="invsona logo" />
-    <h1 id="title">Invsona</h1>
-    <div class="mb-5">
+    <h1 class="pt-2" id="title">Invsona</h1>
+    <div class="mb-4">
       <p id="slogan">Character Creation at Your Finger Tips</p>
     </div>
 
-    <!-- FORM -->
-    <div class="text-start">
-      <form action="/signup" method="post">
-        <div class="mb-3">
-          <label for="name" class="form-label">Name</label>
-          <input type="name" class="form-control" id="name" name="name" />
-        </div>
-
-        <div class="mb-3">
-          <label for="username" class="form-label">Username</label>
-          <input type="username" class="form-control" id="username" name="username" />
-        </div>
-
-        <div class="mb-3">
-          <label for="email" class="form-label">Email</label>
-          <input type="email" class="form-control" id="email" name="email" aria-describedby="emailHelp" name="email" />
-          <div id="emailHelp" class="form-text">
-            We'll never share your email with anyone else.
+      <!-- FORM -->
+      <div class="container text-start">
+        <form action="/signup" method="post">
+          <div class="mb-3">
+            <label for="name" class="form-label">Name</label>
+            <input type="name" class="form-control" id="name" name="name" />
           </div>
-        </div>
 
-        <div class="mb-3">
-          <label for="password" class="form-label">Password</label>
-          <input type="password" class="form-control" id="password" name="password" />
-        </div>
-
-        <div class="mb-3">
-          <label for="securityQuestion" class="form-label">Security Question</label>
-          <input type="text" class="form-control" id="securityQuestion" name="securityQuestion" />
-          <div id="securityQuestionHelp" class="form-text">
-            Remember the answer to your security question in case you forget your password in the future.
+          <div class="mb-3">
+            <label for="username" class="form-label">Username</label>
+            <input
+              type="username"
+              class="form-control"
+              id="username"
+              name="username"
+            />
           </div>
-        </div>
 
-        <div class="mb-3">
-          <label for="securityAnswer" class="form-label">Answer</label>
-          <input type="password" class="form-control" id="securityAnswer" name="securityAnswer" />
-        </div>
+          <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input
+              type="email"
+              class="form-control"
+              id="email"
+              name="email"
+              aria-describedby="emailHelp"
+              name="email"
+            />
+            <div id="emailHelp" class="form-text">
+              We'll never share your email with anyone else.
+            </div>
+          </div>
 
-        <div class="p-4 text-center">
-          <button type="submit" class="btn btn-primary ">
-            SIGNUP
-          </button>
-        </div>
-      </form>
+          <div class="mb-3">
+            <label for="password" class="form-label">Password</label>
+            <input
+              type="password"
+              class="form-control"
+              id="password"
+              name="password"
+            />
+          </div>
+
+          <div class="mb-3">
+            <label for="securityQuestion" class="form-label"
+              >Security Question</label
+            >
+            <input
+              type="text"
+              class="form-control"
+              id="securityQuestion"
+              name="securityQuestion"
+            />
+            <div id="securityQuestionHelp" class="form-text">
+              Remember the answer to your security question in case you forget
+              your password in the future.
+            </div>
+          </div>
+
+          <div class="mb-3">
+            <label for="securityAnswer" class="form-label">Answer</label>
+            <input
+              type="password"
+              class="form-control"
+              id="securityAnswer"
+              name="securityAnswer"
+            />
+          </div>
+
+          <div class="p-4 text-center">
+            <button type="submit" class="btn btn-primary">SIGNUP</button>
+          </div>
+        </form>
+      </div>
     </div>
   </div>
 </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <!-- footer -->
-  <%-include ('./partials/footer.ejs')%>
-</body>
+<!-- footer -->
+<%-include ('./partials/footer.ejs')%>
