--- a/views/logout.ejs
+++ b/views/logout.ejs
@@ -1,52 +1,34 @@
+<!-- Logout page -->
 <!-- header -->
 <%-include ('./partials/header.ejs')%>
 
-<!-- content -->
-<body id="background">
-  <form action="/signout" method="post">
-  <div class="container position-absolute top-50 start-50 translate-middle">
-    <div class="card rounded-5 p-1" id="outerBox">
-      <div class="card text-center p-4 rounded-5" id="innerBox">
-        <div class="row">
-          <div class="col"></div>
-          <div class="col">
-            <img
-              id="logo"
-              class="align-self-center"
-              src="./images/invsona.png"
-              alt="invsona logo"
-              width="200px"
-              height="200px"
-            />
+<!-- video background -->
+<video autoplay muted loop id="background">
+  <source src="./images/blue_bg.mp4" type="video/mp4" />
+</video>
 
-            <h1 id="title">Invsona</h1>
-            <div class="container m-2 pb-5">
-              <p class="wrap" id="slogan">
-                Character Creation at Your Finger Tips
-              </p>
-            </div>
-          </div>
-
-          <div class="col"></div>
-        </div>
-        <div class="row">
-          <div class="pb-5">
-            <p class="fs-1 fw-1">You have been logged out</p>
-          </div>
-          <div class="pb-4">
-            <button
-              type="submit"
-              class="btn btn-primary btn-lg"
-              onclick="window.location.href='/'"
-            >
-              Home
-            </button>
-          </div>
-        </div>
-      </div>
+<!-- logo -->
+<div class="container-fluid" id="login" style="padding-top: 200px;">
+  <div id="box">
+    <img id="logo"src="./images/invsona.png" alt="invsona logo" />
+    <h1 class="pt-3" id="title">Invsona</h1>
+    <div class="container mb-5">
+      <p id="slogan">Character Creation at Your Finger Tips</p>
     </div>
+    <form action="/signout" method="post">
+      <div class="pb-5">
+        <p class="fs-1 fw-1">You have been logged out</p>
+      </div>
+      <button type="submit" class="btn btn-primary" onclick="window.location.href='/'">
+      HOME
+    </button>
+
+
+    </form>
+
+   </div>
   </div>
+</div>
 
-  <!-- footer -->
-  <%-include ('./partials/footer.ejs')%>
-
+<!-- footer -->
+<%-include ('./partials/footer.ejs')%>
