Fix alignment on index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 </video>
 
 <!-- logo -->
-<div class="container-fluid text-center align-self-center" id="content">
+<div class="container-fluid" id="content">
   <div id="box">
     <img id="logo" src="./images/invsona.png" alt="invsona logo" />
     <h1 class="pt-3"id="title">Invsona</h1>
