--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,5 @@
 <div
-  class="container-fluid text-center fixed-bottom bottom-0 start-50 translate-middle-x"
+  class="container-fluid text-center fixed-bottom"
   id="botnav"
 >
   <div class="row">
