--- a/styles/style.css
+++ b/styles/style.css
@@ -1,19 +1,20 @@
+/* GLOBAL CSS SHEET */
 body {
-    font-family: Calibri, "Segoe UI", Arial, sans-serif;
-    height: 100%;
+  font-family: "Gugi", sans-serif;
+  height: 100%;
 }
 
 
 h1 {
-    text-align: center;
+  text-align: center;
 }
 
-.container {
-    margin: 0 auto;
-    width: 800px;
-    text-align: center;
-}
+/* .container {
+  margin: 0 auto;
+  width: 800px;
+  text-align: center;
+} */
 
 .clickable {
-    cursor: hand;
+  cursor: hand;
 }
