--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,35 +1,37 @@
+<!-- Home page for logged in users -->
+
 <!-- navbar -->
 <%-include ("./partials/header.ejs")%>
 
 <!-- content -->
 <!-- display picture and name  -->
-
-<div class="container text-center align-item-center p-5">
-  <div class="p-2">
-    <img src="../images/cat_placeholder.png" id="userImage" alt="userImage" class="p-2" />
-  </div>
-  <h1><%- name%></h1>
-</div>
-
-<!-- cards -->
-
-<div class="container px-2">
-  <div class="row">
-    <% for (var i=1; i<locals.navLinks.length; i++) { %>
-    <div class="col-6">
-      <a href="<%- locals.navLinks[i].link %>">
-        <div class="card">
-          <div class="card-body">
-            <p class="card-title"><%- locals.navLinks[i].upperName %></p>
-            <p class="card-text"><%- locals.navLinks[i].description %></p>
-          </div>
-        </div>
-      </a>
-      <br>
+<div id="invsona-bg">
+  <div class="container text-center align-item-center p-5">
+    <div class="p-3 mt-5">
+      <img src="../images/cat_placeholder.png" id="userImage" alt="userImage" class="p-2" />
     </div>
-    <% } %>
+    <h1><%- name%></h1>
+  </div>
+
+  
+  <!-- cards -->
+  
+  <div class="container align-item-center">
+    <div class="row">
+      <% for (var i=1; i < locals.navLinks.length; i++) { %>
+        <div class="col-6 p-2">
+          <button type="button" class="btn btn-outline-dark" href="<%- locals.navLinks[i].link %>">
+              <p class="card-title" id="card-name"><%- locals.navLinks[i].upperName %></p>
+              <p class="card-text"><%- locals.navLinks[i].description %></p>
+          </button>
+        </div>
+        <% } %>
+      </div>
+    </div>
   </div>
 </div>
+
 
 <!-- nav bar and footer -->
-<%-include ('./partials/navbar.ejs')%> <%-include ('./partials/footer.ejs')%>
+<%-include ('./partials/navbar.ejs')%> 
+<%-include ('./partials/footer.ejs')%>
