--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="./styles/navbar.css" />
     <link rel="stylesheet" href="./styles/home.css" />
     <link rel="stylesheet" href="./styles/profile.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
-<body style="padding-bottom: 5rem;">
+<body>
   
