--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,30 +1,34 @@
 <!-- Home page for logged in users -->
 
+<!-- Home page for logged in users -->
+
 <!-- navbar -->
 <%-include ("./partials/header.ejs")%>
 
 <!-- content -->
 <!-- display picture and name  -->
-<div class="invsona-bg">
+<div id="invsona-bg">
   <div class="container text-center align-item-center p-5">
     <div class="p-3 mt-5">
       <img src="../images/cat_placeholder.png" id="userImage" alt="userImage" class="p-2" />
     </div>
-    <h1 id="display-name"><%- name%></h1>
+    <h1><%- name%></h1>
   </div>
 
   
   <!-- cards -->
   
-  <div class="container align-item-center text-center">
+  <div class="container align-item-center">
     <div class="row">
       <% for (var i=1; i < locals.navLinks.length; i++) { %>
         <div class="col-6 p-2">
-          <a type="button" role="button" class="btn btn-outline-secondary-lg" href="<%- locals.navLinks[i].link %>">
+          <button type="button" class="btn btn-outline-dark" href="<%- locals.navLinks[i].link %>">
               <p class="card-title" id="card-name"><%- locals.navLinks[i].upperName %></p>
               <p class="card-text"><%- locals.navLinks[i].description %></p>
-          </a>
+          </button>
         </div>
+        <% } %>
+      </div>
         <% } %>
       </div>
     </div>
