--- a/styles/home.css
+++ b/styles/home.css
@@ -1,39 +1,37 @@
-.invsona-bg{
-    background-image: url("../images/bg.jpg");
-    background-color: #98A6D4;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    height: 100vh;
-    width: 100%;
-    position: relative;
+.invsona-bg {
+  background-image: url("../images/bg.jpg");
+  background-color: #98a6d4;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100vh;
+  width: 100%;
+  position: relative;
 }
 
-#userImage{
-    width: 250px;
-    height: 250px;
-    object-fit: cover;
-    border-radius: 100%;
-    border: 2px dotted #fff;
-    filter: drop-shadow(0px 0px 30px #051726);
-    text-align: center;
+#userImage {
+  width: 250px;
+  height: 250px;
+  object-fit: cover;
+  border-radius: 100%;
+  border: 2px dotted #fff;
+  filter: drop-shadow(0px 0px 30px #051726);
+  text-align: center;
 }
 
-#display-pic{
-    padding-top:100px;
-    font-size: x-large;
+#display-pic {
+  padding-top: 100px;
+  font-size: x-large;
 }
 
-#display-name{
-    padding-top: 10px;
-    font-size: 30pt;
+#display-name {
+  padding-top: 10px;
+  font-size: 30pt;
 }
 
-
-#card-name{
-    font-size: 25px;
-    font-weight: bolder;
-    font-family: "Gugi", sans-serif;
-    color:#98A6D4;
+#card-name {
+  font-size: 25px;
+  font-weight: bolder;
+  font-family: "Gugi", sans-serif;
+  color: #98a6d4;
 }
-
