--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -3,7 +3,7 @@
   id="botnav"
 >
   <div class="row">
-    <div class="navbar border-success">
+    <div class="navbar">
       <!-- save  -->
       <div class="icon col pt-3">
         <a href="/saved">
@@ -31,15 +31,16 @@
       </div>
 
       <!-- home -->
-      <div class="icon col pt-3">
+      <div class="icon col">
         <a href="/home">
           <img
             src="../images/icons/home.png"
             alt="saved"
-            width="30px"
-            height="30px"
+            width="50px"
+            height="50px"
+            id="home"
           />
-          <p>Home</p>
+          <!-- <p>Home</p> -->
         </a>
       </div>
 
