--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,15 +1,26 @@
 #botnav{
   font-size: 10px;
   font-family: "Gugi", sans-serif;
-  color: white;
+  background-color:white; /*#051726*/
   font-weight: bolder;
   text-decoration: none;
-  border: 1px solid black;
+  /* border: 1px solid black; */
+  filter: drop-shadow(0px 0px 20px #81FFD9);
+  filter: opacity(0.8);
+}
+
+
+#home{
+  align-items: center;
 }
 
 .icon{
-  border: 1px solid black;
+  /* border: 1px solid black; */
   color: white;
+}
+
+.icon:hover{
+  color: #81FFD9;
 }
 
 a{
