Align home buttons to center home.ejs

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
   
   <!-- cards -->
   
-  <div class="container align-item-center">
+  <div class="container align-item-center text-center">
     <div class="row">
       <% for (var i=1; i < locals.navLinks.length; i++) { %>
         <div class="col-6 p-2">
