--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -31,7 +31,7 @@
       </div>
 
       <!-- home -->
-      <div class="icon col">
+      <div class="icon col py-3">
         <a href="/home">
           <img
             src="../images/icons/home.png"
