Update UI for profile.ejs

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
 
 <!-- content -->
 <!-- display picture and name  -->
-<div id="invsona-bg">
+<div class="invsona-bg">
   <div class="container text-center align-item-center p-5">
     <div class="p-3 mt-5">
       <img src="../images/cat_placeholder.png" id="userImage" alt="userImage" class="p-2" />
