--- a/styles/home.css
+++ b/styles/home.css
@@ -1,4 +1,4 @@
-#invsona-bg{
+.invsona-bg{
     background-image: url("../images/bg.jpg");
     background-color: #98A6D4;
     background-size: cover;
@@ -7,7 +7,6 @@
     height: 100vh;
     width: 100%;
     position: relative;
-    z-index: -1;
 }
 
 #userImage{
