--- a/styles/profile.css
+++ b/styles/profile.css
@@ -1,3 +1,7 @@
+#decor_user{
+  filter: drop-shadow(0px 0px 30px #051726);
+}
+
 .editicon {
   position: absolute;
   right: 0;
@@ -6,8 +10,8 @@
 
 .editUserImage {
   border-radius: 50%;
-  height: 150px;
-  width: 150px;
+  height: 200px;
+  width: 200px;
   background-size: cover;
   background-position: center;
   background-blend-mode: multiply;
@@ -19,6 +23,7 @@
   cursor: pointer;
 }
 
+
 .editUserImage:hover {
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 10000;
@@ -29,8 +34,9 @@
 
 .editUserImage span {
   display: inline-block;
-  padding-top: 4.5em;
-  padding-bottom: 4.5em;
+  background-image: url("../images/edit.png");
+  padding-top: 5.5em;
+  padding-bottom: 5.5em;
 }
 
 form input[type="file"] {
