--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -29,4 +29,5 @@
     <link rel="stylesheet" href="../styles/profile.css" />
     <link rel="stylesheet" href="../styles/style.css" />
   </head>
-  <body>
+  <body></body>
+</html>
