--- a/views/partials/emptybackbar.ejs
+++ b/views/partials/emptybackbar.ejs
@@ -1,7 +1,8 @@
-<body>
+
+
     <!-- back button  -->
     <div class="container-fluid">
-      <div class="row text-bg-primary pt-5 pb-4 px-3">
+      <div class="row text-bg-light pt-5 pb-4 px-3">
         <div class="col-1">
           <a href="history.back()">
             <img
