--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -26,7 +26,9 @@
   
       <!-- Menu -->
       <div class="container px-4 align-item-center ">
-        <div class="card p-3 bg-secondary">
+
+        <!-- Account Settings -->
+        <div class="card p-2 bg-secondary">
           <a href="/profile/account-setting">
             <div class="row ">
               <div class="col-2">
@@ -41,7 +43,10 @@
             </div>
           </a>
         </div>
-        <div class="card p-3 bg-secondary">
+        <br />
+
+        <!-- Filters -->
+        <div class="card p-2 bg-secondary">
           <a href="###">
             <div class="row">
               <div class="col-2">
@@ -56,7 +61,10 @@
             </div>
           </a>
         </div>
-        <div class="card p-3 bg-secondary">
+        <br />
+
+        <!-- Saved Persona -->
+        <div class="card p-2 bg-secondary">
           <a href="####">
             <div class="row">
               <div class="col-2">
@@ -71,7 +79,10 @@
             </div>
           </a>
         </div>
-        <div class="card p-3 bg-secondary">
+        <br />
+
+        <!-- Saved Dialogue -->
+        <div class="card p-2 bg-secondary">
           <a href="#####">
             <div class="row">
               <div class="col-2">
@@ -86,7 +97,10 @@
             </div>
           </a>
         </div>
-        <div class="card p-3 bg-secondary">
+        <br />
+
+        <!-- About Us -->
+        <div class="card p-2 bg-secondary">
           <a href="######">
             <div class="row">
               <div class="col-2">
@@ -101,7 +115,10 @@
             </div>
           </a>
         </div>
-        <div class="card p-3 bg-secondary">
+        <br />
+
+        <!-- FAQ -->
+        <div class="card p-2 bg-secondary">
           <a href="#######">
             <div class="row">
               <div class="col-2">
@@ -116,15 +133,20 @@
             </div>
           </a>
         </div>
-        <div class="text-center pt-5">
+        <br />
+        <br />
+
+        <!-- Logout -->
+        <div class="text-center ">
           <button
             type="button"
-            class="btn btn-outline-danger-lg"
+            class="btn"
             onclick="window.location.href='/logout'"
           >
             LOGOUT
           </button>
         </div>
+        <br />
       </div>
     </div>
   
