Minor fixes on spaces for profile.ejs

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -27,7 +27,9 @@
   
       <!-- Menu -->
       <div class="container px-4 align-item-center ">
-        <div class="card p-3 bg-secondary">
+
+        <!-- Account Settings -->
+        <div class="card p-2 bg-secondary">
           <a href="/profile/account-setting">
             <div class="row ">
               <div class="col-2">
@@ -42,7 +44,10 @@
             </div>
           </a>
         </div>
-        <div class="card p-3 bg-secondary">
+        <br />
+
+        <!-- Filters -->
+        <div class="card p-2 bg-secondary">
           <a href="###">
             <div class="row">
               <div class="col-2">
@@ -57,7 +62,10 @@
             </div>
           </a>
         </div>
-        <div class="card p-3 bg-secondary">
+        <br />
+
+        <!-- Saved Persona -->
+        <div class="card p-2 bg-secondary">
           <a href="####">
             <div class="row">
               <div class="col-2">
@@ -72,7 +80,10 @@
             </div>
           </a>
         </div>
-        <div class="card p-3 bg-secondary">
+        <br />
+
+        <!-- Saved Dialogue -->
+        <div class="card p-2 bg-secondary">
           <a href="#####">
             <div class="row">
               <div class="col-2">
@@ -87,7 +98,10 @@
             </div>
           </a>
         </div>
-        <div class="card p-3 bg-secondary">
+        <br />
+
+        <!-- About Us -->
+        <div class="card p-2 bg-secondary">
           <a href="######">
             <div class="row">
               <div class="col-2">
@@ -102,7 +116,10 @@
             </div>
           </a>
         </div>
-        <div class="card p-3 bg-secondary">
+        <br />
+
+        <!-- FAQ -->
+        <div class="card p-2 bg-secondary">
           <a href="#######">
             <div class="row">
               <div class="col-2">
@@ -117,15 +134,20 @@
             </div>
           </a>
         </div>
-        <div class="text-center pt-5">
+        <br />
+        <br />
+
+        <!-- Logout -->
+        <div class="text-center ">
           <button
             type="button"
-            class="btn btn-outline-danger-lg"
+            class="btn"
             onclick="window.location.href='/logout'"
           >
             LOGOUT
           </button>
         </div>
+        <br />
       </div>
     </div>
   
