--- a/views/partials/emptybackbar.ejs
+++ b/views/partials/emptybackbar.ejs
@@ -1,20 +1,19 @@
-
-
-    <!-- back button  -->
-    <div class="container-fluid">
-      <div class="row text-bg-light pt-5 pb-4 px-3">
-        <div class="col-1">
-          <a href="history.back()">
-            <img
-              src="../images/icons/backarrow.png"
-              alt="back"
-              width="40px"
-              height="40px"
-            />
-          </a>
-        </div>
-        <!-- ADD THIS CODE FOR A TITLE ON THE BACK BAR -->
-        <!-- <div class="col text-center">
+<!-- back button  -->
+<div class="container-fluid align-self-center invsona-bg">
+  <div class="row text-bg-light pt-5 pb-4 px-3">
+    <div class="col-1">
+      <a href="history.back()">
+        <img
+          src="../images/icons/backarrow.png"
+          alt="back"
+          width="40px"
+          height="40px"
+        />
+      </a>
+    </div>
+    <!-- ADD THIS CODE FOR A TITLE ON THE BACK BAR -->
+    <!-- <div class="col text-center">
             <h1>PLACEHOLDER</h1>
           </div>
         </div> -->
+    <!-- END TITLE CODE -->
