Fix minor issues of broken routes home and setting

--- a/views/partials/emptybackbar.ejs
+++ b/views/partials/emptybackbar.ejs
@@ -2,7 +2,7 @@
 <div class="container-fluid align-self-center invsona-bg">
   <div class="row text-bg-light pt-5 pb-4 px-3">
     <div class="col-1">
-      <a href="history.back()">
+      <a onclick="history.back()">
         <img
           src="../images/icons/backarrow.png"
           alt="back"
