--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,10 +20,10 @@
     <div class="row">
       <% for (var i=1; i < locals.navLinks.length; i++) { %>
         <div class="col-6 p-2">
-          <button type="button" class="btn btn-outline-secondary-lg" href="<%- locals.navLinks[i].link %>">
+          <a type="button" role="button" class="btn btn-outline-secondary-lg" href="<%- locals.navLinks[i].link %>">
               <p class="card-title" id="card-name"><%- locals.navLinks[i].upperName %></p>
               <p class="card-text"><%- locals.navLinks[i].description %></p>
-          </button>
+          </a>
         </div>
         <% } %>
       </div>
