Fix minor issues of broken routes home and setting

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,7 +3,7 @@
 <!-- header -->
 <%-include ('./partials/header.ejs')%>
 
-<div class="container invsona-bg">
+<div class="container-fluid invsona-bg">
       <div class="container text-center align-item-center pt-5" id="decor_user">
         <div class="pt-5 pb-5">
           <form action="upload.png" method="post" enctype="multipart/form-data">
