--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
 <!-- content -->
 <!-- display picture and name  -->
 <div class="invsona-bg">
-  <div class="container text-center align-item-center p-5">
+  <div class="container text-center align-item-center p-2 pt-1">
     <div class="p-3 mt-5">
       <img src="../images/cat_placeholder.png" id="userImage" alt="userImage" class="p-2" />
     </div>
@@ -19,10 +19,11 @@
   <div class="container align-item-center text-center">
     <div class="row">
       <% for (var i=1; i < locals.navLinks.length; i++) { %>
-        <div class="col-6 p-2">
+        <div class="col-6 px-2 py-2">
           <a type="button" role="button" class="btn btn-outline-secondary-lg" href="<%- locals.navLinks[i].link %>">
+            <img src="<%-locals.navLinks[i].icon%>" style="opacity: 70%;" class="pt-2 pb-1" alt="">
               <p class="card-title" id="card-name"><%- locals.navLinks[i].upperName %></p>
-              <p class="card-text"><%- locals.navLinks[i].description %></p>
+              <p class="card-text" style="font-size: 9pt; width:150px; height: 80px;"><%- locals.navLinks[i].description %></p>
           </a>
         </div>
         <% } %>
