Reroute .ejs files to authorization and profile

--- a/views/authorization/login.ejs
+++ b/views/authorization/login.ejs
@@ -1,7 +1,7 @@
 <!-- Purpose: Login Screen for Invsona -->
 
 <!-- header -->
-<%-include ('./partials/header.ejs')%>
+<%-include ('../partials/header.ejs')%>
 
 <!-- content -->
 <!-- video background -->
@@ -67,4 +67,4 @@
 </div>
 
 <!-- footer -->
-<%-include ('./partials/footer.ejs')%>
+<%-include ('../partials/footer.ejs')%>
