--- a/views/authorization/resetPassword.ejs
+++ b/views/authorization/resetPassword.ejs
@@ -1,6 +1,6 @@
 <!-- Reset Password -->
 <!-- header -->
-<%-include ('./partials/header.ejs')%>
+<%-include ('../partials/header.ejs')%>
 
 <!-- content -->
 <!-- video background -->
@@ -115,4 +115,4 @@
 </div>
 
   <!-- footer -->
-  <%-include ('./partials/footer.ejs')%>
+  <%-include ('../partials/footer.ejs')%>
