--- a/views/authorization/signup.ejs
+++ b/views/authorization/signup.ejs
@@ -1,6 +1,6 @@
 <!-- Purpose: Sign Up for Invsona -->
 <!-- header -->
-<%-include ('./partials/header.ejs')%>
+<%-include ('../partials/header.ejs')%>
 
 <!-- content -->
 <!-- video background -->
@@ -96,4 +96,4 @@
 </div>
 
 <!-- footer -->
-<%-include ('./partials/footer.ejs')%>
+<%-include ('../partials/footer.ejs')%>
