--- a/views/profile/accountSettings.ejs
+++ b/views/profile/accountSettings.ejs
@@ -1,7 +1,7 @@
 <!-- Accouunt Settings -->
 <!-- header and back header title page -->
-<%-include ('./partials/header.ejs')%>
-<%-include ('./partials/emptybackbar.ejs')%>
+<%-include ('../partials/header.ejs')%>
+<%-include ('../partials/emptybackbar.ejs')%>
 
 <!-- header title -->
 <div class="col text-center">
@@ -53,4 +53,7 @@
 </div>
 </div>
 
+<!-- navbar and footer-->
+<%-include ('../partials/navbar.ejs')%>
+<%-include ('../partials/footer.ejs')%>
 
