--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -1,7 +1,6 @@
 <!-- Profile information -->
-<!-- Profile information -->
 <!-- header -->
-<%-include ('./partials/header.ejs')%>
+<%-include ('../partials/header.ejs')%>
 
 <div class="container-fluid invsona-bg">
       <div class="container text-center align-item-center pt-5" id="decor_user">
@@ -153,4 +152,5 @@
   
 </div>
   <!-- navbar and footer -->
-  <%-include ("./partials/navbar.ejs")%> <%-include ("./partials/footer.ejs") %>
+  <%-include ("../partials/navbar.ejs")%> 
+  <%-include ("../partials/footer.ejs") %>
