Implement 401  and 404 error pages

--- a/views/authorization/login.ejs
+++ b/views/authorization/login.ejs
@@ -58,7 +58,7 @@
         <!-- SIGN UP -->
         <div>
           <p class="text-center">
-            Don't have an account? <a href="/signup">Sign Up</a>
+            Don't have an account? <a href="/signup">SIGN UP</a>
           </p>
         </div>
       </form>
