--- a/views/error/404.ejs
+++ b/views/error/404.ejs
@@ -1,1 +1,34 @@
-<!-- 404 Page Not Found  -->
+<!-- 404- PAGE NOT FOUND -->
+<!-- TO DO: put an easter egg -->
+<!-- header -->
+<%-include ('../partials/header.ejs')%>
+
+<!-- video background -->
+<video autoplay muted loop id="background">
+  <source src="./images/blue_bg.mp4" type="video/mp4" />
+</video>
+
+<!-- logo -->
+<div class="container-fluid" id="login" style="padding-top: 200px;">
+  <div id="box">
+    <img id="logo"src="./images/invsona.png" alt="invsona logo" />
+    <h1 class="pt-3" id="title">Invsona</h1>
+    <div class="container mb-5">
+      <p id="slogan">Character Creation at Your Finger Tips</p>
+    </div>
+
+      <div class="pb-5">
+        <p class="fs-1 fw-1">ERROR 404:<br> PAGE NOT FOUND</p>
+      </div>
+      <form action="/404" method="post">
+      <button type="submit" class="btn btn-primary" onclick="window.location.href='/'">
+      RETURN TO HOME
+    </button>
+    </form>
+
+   </div>
+  </div>
+</div>
+
+<!-- footer -->
+<%-include ('../partials/footer.ejs')%>
