Added 400-1, and 500 errors

--- a/views/error/400-1.ejs
+++ b/views/error/400-1.ejs
@@ -17,9 +17,9 @@
     </div>
 
       <div class="pb-5">
-        <p class="fs-1 fw-1">ERROR 401: <br> INVALID EMAIL</p>
+        <p class="fs-1 fw-1">ERROR 400: <br> INCORRECT ANSWER TO SECURITY QUESTION</p>
       </div>
-      <form action="/401" method="post">
+      <form action="/400-1" method="post">
       <button type="submit" class="btn btn-primary">
       RETURN TO LOGIN
     </button>
