--- a/views/error/500.ejs
+++ b/views/error/500.ejs
@@ -17,9 +17,9 @@
     </div>
 
       <div class="pb-5">
-        <p class="fs-1 fw-1">ERROR 401: <br> INVALID EMAIL</p>
+        <p class="fs-1 fw-1">ERROR 500: <br> AN ERROR OCCURRED WHILE CREATING YOUR ACCOUNT</p>
       </div>
-      <form action="/401" method="post">
+      <form action="/500" method="post">
       <button type="submit" class="btn btn-primary">
       RETURN TO LOGIN
     </button>
