Add skeleton pages and connection to Aboutus

--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -101,7 +101,7 @@
 
         <!-- About Us -->
         <div class="card p-2 bg-secondary">
-          <a href="######">
+          <a href="/about-us">
             <div class="row">
               <div class="col-2">
                 <img
@@ -119,7 +119,7 @@
 
         <!-- FAQ -->
         <div class="card p-2 bg-secondary">
-          <a href="#######">
+          <a href="/faq">
             <div class="row">
               <div class="col-2">
                 <img
