--- a/styles/home.css
+++ b/styles/home.css
@@ -4,7 +4,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  height: 100vh;
+  height: auto;
   width: 100%;
   position: relative;
 }
