--- a/views/profile/aboutUs.ejs
+++ b/views/profile/aboutUs.ejs
@@ -9,11 +9,33 @@
     </div>
 </div>
 
-<div class="container invsona-bg">
+<div class="container pt-5" style="padding-bottom: 100px;">
+    <div class="card">
+        <img src="../images/invsona-banner.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <div class="card-text">
+            <h1 id="title">Mission</h1>
+            <p class="para">Our mission is to empower artists, developers, and other creative individuals by providing them with the tools and resources to overcome creative blocks. We achieve this by leveraging the power of AI to generate customized personas tailored to individual users' needs and preferences. Our aim is to inspire creativity, spark new ideas, and support the creative process.</p>
 
-<h1>Hello world</h1>
+            <h1 id="title">Vision</h1>
+            <p class="para">Our vision is to become the leading provider of AI-generated personas for creative individuals. We aim to be the go-to resource for artists, developers, and other creative individuals looking to overcome creative blocks and find inspiration. We also aim to be the leading provider of AI-generated personas for businesses looking to improve their marketing and advertising strategies.</p>
 
+            <h1 id="title">Values</h1>
+            <h2>1. Seek Creativity</h2>
+            <p>Unique character creation with infinite possibilities.</p>
+            <h2>2. Unique</h2>
+            <p>With infinite possibilities there are tons of uniques in character's feature.</p>
+            <h2>3. Inspire</h2>
+            <p>Turning fictional into reality with a touch of your fingertips.</p>
+            
+        </div>
+        </div>
+      </div>
 </div>
+<br>
+<br>
+</div>
+
 
 <!-- navbar and footer -->
 <%-include ('../partials/navbar') %>
