--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,21 @@
 /* GLOBAL CSS SHEET */
+.invsona-bg {
+  background-image: url("../images/bg.jpg");
+  background-color: #98a6d4;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  margin: 0;
+  height: 100vh;
+  width: 100%;
+  position: relative;
+}
+
+
 body {
   font-family: "Gugi", sans-serif;
-  height: 100%;
+  height: auto;
 }
 
 
