Debugging background image problem

--- a/views/profile/accountSettings.ejs
+++ b/views/profile/accountSettings.ejs
@@ -10,8 +10,8 @@
 </div>
 
 <!-- content -->
-<div class=" container-fluid ">
-<div class=" pt-4 px-3">
+
+<div class="container-fluid p-4" >
   <form action="/profile/account-settings" method="post">
     <fieldset id="userInfoField" <% if (disabled) { %>disabled<% } %>>
       <!-- Username  -->
@@ -50,7 +50,7 @@
     <button type="submit" class="btn btn-primary" name="action" value="Edit">Edit</button>
     <button type="submit" class="btn btn-primary" name="action" value="Save">Save</button>
   </form>
-</div>
+
 </div>
 
 <!-- navbar and footer-->
