--- a/styles/style.css
+++ b/styles/style.css
@@ -10,19 +10,16 @@
   height: 100vh;
   width: 100%;
   position: relative;
+  overflow: auto;
 }
-
 
 body {
   font-family: "Gugi", sans-serif;
-  height: auto;
 }
-
 
 h1 {
   text-align: center;
 }
-
 
 .para{
   font-size: 10pt;
