Fix Account setting background

--- a/views/profile/accountSettings.ejs
+++ b/views/profile/accountSettings.ejs
@@ -11,7 +11,7 @@
 
 <!-- content -->
 
-<div class="container-fluid p-4" >
+<div class="container p-4" style="margin-bottom: 100%;">
   <form action="/profile/account-settings" method="post">
     <fieldset id="userInfoField" <% if (disabled) { %>disabled<% } %>>
       <!-- Username  -->
