--- a/views/dialogueFilters.ejs
+++ b/views/dialogueFilters.ejs
@@ -1,21 +1,19 @@
 <!-- navbar and footer -->
 <%-include ("./partials/header.ejs")%>
 
-<h1>This is the dialogue filters</h1>
-<form action="/dialogueFilters" method="POST"></form>
+<h1>This is the Dialogue Filters Page.</h1>
 <div class="container">
-    <% for (var i=0; i<locals.dialogueFilters.length; i++) { %>
+    <% for (var i=0; i<locals.personaLinks.length; i++) { %>
     <div class="row">
-        <a class="py-5 btn btn-secondary"
-            href="<%- locals.dialogueFilters[i].link %>"><%- locals.dialogueFilters[i].name %></a>
+        <button type="submit" name="button" value="Inner Dialogue" class="py-5 btn btn-secondary">>Generate Inner
+            Dialogue</button>
+        <button type="submit" name="button" value="Conversation" class="py-5 btn btn-secondary">Generate
+            Conversation</button>
+        <button type="submit" name="button" value="User-Persona Chat" class="py-5 btn btn-secondary">Generate
+            User-Persona Chat</button>
     </div>
     <br>
     <% } %>
 </div>
-<% if (output) { %>
-<h2>Generated Output:</h2>
-<p><%= output %></p>
-<% } %>
 
-<%-include ("./partials/navbar.ejs")%>
 <%-include ("./partials/navbar.ejs")%>
