--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -5,38 +5,24 @@
 
 <div class="container" id="chatContainer" id="chatContainer">
 <div class="container-fluid mb-5 pb-5" id="chatContainer">
+<div class="container" id="chatContainer" id="chatContainer">
   <!-- Existing chat messages -->
-  <div class="row-fluid">
-    <% for (var i=0; i<personaHistory.length; i++) { %>
-    <div class="col-12 my-2" id="userInput">
-      <div class="card bg-primary text-bg-light">
-        <div class="card-body m-3">
-          <div class="card-title">User:</div>
-          <div class="card-text"><%- personaHistory[i].userPrompt %>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-12" id="botOutput">
-      <div class="card">
-        <i class="material-icons position-absolute top-0 end-0 my-3 clickable save-icon" data-index="<%- i %>">star_outlined</i>
-        <div class="card-body m-3">
-          <div class="card-title">Bot:</div>
-          <div class="card-text"><%- personaHistory[i].botResponse %>
-          </div>
-        </div>
-      </div>
-    </div>
-    <% } %>
-  </div>
-</div>
+  <!-- <s!-- Existing chat messages -->
+  <div class="row">
+    <div class="col-12">
+      <s%- i + "&nbsp;" + locals.chatPrompt[i] %>
+      <s% } %>
+    </div> -->
+</div><br>
 
-<form action="/persona/chat" method="post" class="text-center input-container">
+<form class="text-center input-container">
   <div class="row">
     <input class="form-control col" rows="1" cols="1" type="text" name="prompt" placeholder="<%= placeholderText %>" />
     <button class="btn col-3" type="submit">Send</button>
   </div>
 </form>
+
+<script type="module" src="../models/chat.js"></script>
 
 <!-- navbar and footer -->
 <%-include ("./partials/navbar.ejs")%>
