--- a/styles/style.css
+++ b/styles/style.css
@@ -36,5 +36,48 @@ h1 {
 } */
 
 .clickable {
-  cursor: hand;
+  cursor: pointer;
+}
+
+#meow{
+  position: relative;
+  right: 0;
+  bottom: 0;
+  color: bisque;
+  max-width:100%;
+  max-height:100%;
+  padding-top: 0px;
+}
+
+.secret{
+  position: absolute;
+  filter: grayscale(1);
+  filter: invert(1);
+  background: rgba(0, 0, 0, 0.8);
+  width: 100%;
+  height: 100%;
+  padding: 50px;
+  background-position: center;
+  background-size: cover;
+}
+
+.meowpointer{
+  cursor: url('./images/nyancat.png'), auto;
+}
+
+.special:hover{
+  animation-name: spin;
+  animation-duration: 50ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+
+}
+
+@keyframes spin {
+  from {
+      transform:rotate(0deg);
+  }
+  to {
+      transform:rotate(360deg);
+  }
 }
