--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,6 +15,10 @@
 
     <!-- Bootstrap jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  
+    <!-- js files -->
+    <script src="../src/secret.js"></script>
+
 
     <!-- google icon -->
     <link
